# IncomeClassifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ETL/: ETL.cpp  ETL.h
References/: Raw Data Source.webloc
